# LIV-reactors-linhx

./: .gitignore  CMakeLists.txt  README.md  位置备注.md
GLB/DayaBay/: DayaBay_EH1.glb  DayaBay_EH1_2022.glb  DayaBay_EH1_hyy.glb  DayaBay_EH2.glb  DayaBay_EH2_2022.glb  DayaBay_EH2_hyy.glb  DayaBay_EH3.glb  DayaBay_EH3_2022.glb  DayaBay_EH3_hyy.glb
GLB/DoubleChooz/: DoubleChooz_FD.glb  DoubleChooz_JPfix_FD.glb  DoubleChooz_JPfix_ND.glb  DoubleChooz_ND.glb
GLB/RENO/: RENO_FD.glb  RENO_FD_2020.glb  RENO_JPfix_FD.glb  RENO_JPfix_ND.glb  RENO_ND.glb
code_source/: DayaBay_chi.h  DoubleChooz_chi.h  LIV_minizer_lat.c  Lorentz_violation_lat.h  RENO_chi.h  glbmath_lat.h  reactor_fluxcheck.c
